<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LicenceActivity"
    android:padding="20dp"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_title"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_desc"
            android:textSize="14sp"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_key_input_label"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_license_key"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/slate_100"
            android:gravity="top"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/button_license_submit"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_button_check" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>